--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,6 @@ body {
   font-family: "Noto Sans", sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #3c4048;
-  color: #eaeaea;
+  background-color: #0e1621;
+  color: #fafafa;
 }
